Bug 1008707: Implemented BitOr recover operation; r=bbouvier